extensions/odoo_theme/static/style.scss
/* ... */
.o_logo img {
    @include media-breakpoint-up(lg) {
        height: 30px
    }
}

.o_search_wrapper {
    .o_search {
        position: relative;
        width: 100%;
        @include media-breakpoint-up(lg) {
            max-width: 500px;
        }

        .btn {
            @include o-position-absolute($top: 50%, $right: 1rem);
            @include o-transform (translateY(-50%)) ;
            padding: 0;
            font-size: 1.2rem;
            color: $gray;
        }
    }
}

//------------------------------------------------------------------------------
// Left side nav toctree
//------------------------------------------------------------------------------

.o_side_nav {
    width: 100%;
    height: calc(100vh - #{$o-header-mobile-height});
    overflow-y: auto;
    position: fixed;
    top: -100%;
    left:0;

    &.show {
        top: $o-header-mobile-height;
    }
    @include media-breakpoint-up(lg) {
        width: $o-side-nav-width;
        height: calc(100vh - #{$o-header-height});
        top: $o-header-height;
        padding-top: 2rem;
        padding-left: 3rem;
    }
    @include o-transition(all, .3s);
    padding-top: 1rem;
    padding-left: 1rem;
    background-color: lighten($o-violet-dark, 70%) ;
    z-index: 10;
    @include font-size($font-size-secondary);
    color: $o-violet-dark;

    .toctree-l1 {
        padding-top: .5rem;
        padding-bottom: .5rem;
    }

    .toctree-l1 > ul {
        padding-left: 1.5rem;
    }

    ul {
        .o_deepest_active_toc_entry {
            background-color: $gray-lightest;
        }

        > .toctree-l1 {
            &[class*="o_menu_"] > .o_toc_entry_wrapper > i {
                opacity: .75;
                
                &:before {
                    @include o-inline-icon($i-doc-apps, 0 1rem 0 0);
                    color: $o-violet-dark;
                    margin-right: 0.5rem;
                }
            }

            &.o_menu_applications > .o_toc_entry_wrapper > i:before{
                content:'#{$i-doc-apps}';
            }

            &.o_menu_administration > .o_toc_entry_wrapper > i:before{
                content:'#{$i-doc-admin}';
            }

            &.o_menu_developer > .o_toc_entry_wrapper > i:before{
                content:'#{$i-doc-dev}';
            }

            &.o_menu_services > .o_toc_entry_wrapper > i:before{
                content:'#{$i-doc-services}';
            }

            &.o_menu_contributing > .o_toc_entry_wrapper > i:before{
                content:'#{$i-doc-contribute}';
            }

        }
    }
    scrollbar-width: thin;
    scrollbar-color: $o-violet-darker transparent;

    &::-webkit-scrollbar {
        width: 5px;
    }

    &::-webkit-scrollbar-track {
        background: $white;
    }

    &::-webkit-scrollbar-thumb {
        background-color: $o-violet-darker ;
        border-radius: 0;
    }
}

.o_side_nav, .o_page_toc_nav {
    ul { // all uls in toc
        list-style: none;
        padding-left: 1rem;

        li {
            padding-left: .2rem;
            > a.reference {
                padding-left: 1.2rem;
            }

            a {
                display: inline-block;
                padding: .5rem 0;
                color: inherit;
                opacity: .75;

                &.current, &:hover {
                    opacity: 1;
                }
            }

            &:not(.toctree-l1) {
                .o_toc_entry_wrapper {
                    &:not(.o_page_toc_title) {
                        display: flex;
                        align-items: baseline;
                    }

                    > i[class^="i-"] {
                        display: inline-block;
                        margin-right: .2rem;
                        @include o-transition(rotate, .3s);
                        font-size: .75rem;
                        font-weight: $fw_bold;
                        color: inherit;

                        &[aria-expanded="true"] {
                            @include o-transform(rotate(90deg));
                        }
                    }
                }
            }
            &.o_active_toc_entry {
                &:not(.toctree-l1) > .o_toc_entry_wrapper {
                    i[class^="i-"]:not(.collapsed) {
                        @include o-transform(rotate(90deg));
                    }
                }
                > a , > .o_toc_entry_wrapper a {
                    font-weight: $fw_bold;
                    opacity: 1;
                }
            }
        }
    }

    > ul { //is first ul in toc
        padding-left: 0;
    }
}
//------------------------------------------------------------------------------
// On this page local toctree
//------------------------------------------------------------------------------

    aside.o_page_toc {
        display: none;
        @include font-size($font-size-secondary);
        @include media-breakpoint-up(lg) {
            display: block;
            position: -webkit-sticky;
            position: sticky;
            top: $o-header-height;
            right: 0;
            width: $o-on-page-width;
            height: 100%;
            max-height: calc(100vh - #{$o-header-height});
            padding: 3rem 3rem 3rem 0;
            overflow-y: auto;
        }

        h3 {
            text-transform: uppercase;
            font-weight: $fw_bold;
            color: $gray-darker;
            padding-left: .5rem;
            margin-bottom: .5rem;
        }

        a {
            font-weight: $fw_regular;
            color: $gray-darkest;
        }

        .o_page_toc_title {
            display:none;

            + ul {
                padding-left: 0;
            }
        }
    }
/* ... */

